[package]
name = "wormhole-deploys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cphf = "1"
const-decoder = "0.4.0"
const_panic = "0.2.12"
serde = {workspace = true, optional = true}
bs58 = "0.5.1"
