[package]
name = "wormhole-vaas"
description = "Serialization/deserialization of Wormhole VAAs"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives= { workspace = true, optional = true }
hex-literal.workspace = true
ruint.workspace = true
serde = {workspace = true, optional = true, features = ["derive"]}
serde_json = { workspace = true, optional = true }
wormhole-io = { workspace = true }
sha3 = { version = "0.10", optional = true }

[dev-dependencies]

[features]
default = ["sha3"]
alloy = ["dep:alloy-primitives", "wormhole-io/alloy"]
serde = ["dep:serde", "dep:serde_json", "alloy-primitives/serde", "wormhole-io/serde"]
